<resources>
    <string name="app_name">RedEvent</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar o Registrar</string>
    <string name="action_sign_in_short">Ingresar</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="topics_info_text">Seleccione los tópicos que le interese</string>
    <string name="topics_save_button">Guardar preferencias</string>

    <string name="event_checking">Checking Evento</string>
    <string name="event_value">Valorar Evento</string>
    <string name="default_text">No name kept</string>
    <string name="event_description">Event description</string>
    <string name="event_date">Fecha:</string>
    <string name="event_hour">Hora:</string>
    <string name="event_address">Dirección:</string>
    <string name="event_join">Asistir Evento</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_welcome_back">"Welcome back, "</string>
    <string name="topic_empty_topics_selected_message">You must selected any topic.</string>

    <string name="event_price">S/</string>
    <string name="event_rating_1">1</string>
    <string name="event_rating_2">2</string>
    <string name="event_rating_3">3</string>
    <string name="event_rating_4">4</string>
    <string name="event_rating_5">5</string>

    <string name="profile_photo_profile">Photo Profile</string>
    <string name="profile_change_button">Change</string>
    <string name="profile_edit_button">Edit</string>
    <string name="profile_select_a_source">Select a suorce</string>
    <string name="profile_select_gallery">Gallery</string>
    <string name="profile_select_camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
