<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        android:id="@+id/eventCard">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_height="match_parent"  >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/imageEvent"
                android:scaleType="centerInside"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/event_description"
                android:id="@+id/descriptionEvent"
                android:layout_below="@+id/imageEvent"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:scrollIndicators="right" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/event_date"
                android:id="@+id/dateEvent"
                android:layout_below="@+id/descriptionEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="01/01/2016"
                android:id="@+id/datevalueEvent"
                android:layout_below="@+id/descriptionEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/dateEvent"
                android:layout_alignBottom="@+id/dateEvent" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/event_price"
                android:id="@+id/priceEvent"
                android:layout_below="@+id/dateEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="0.00"
                android:id="@+id/pricevalueEvent"
                android:layout_below="@+id/dateEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/priceEvent"
                android:layout_alignBottom="@+id/priceEvent" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/event_address"
                android:id="@+id/addressEvent"
                android:layout_below="@+id/priceEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Avenida Javier Prado 1144 San Isidro"
                android:id="@+id/addressvalueEvent"
                android:layout_below="@+id/priceEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/addressEvent"
                android:layout_alignBottom="@+id/addressEvent" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_checking"
                android:id="@+id/checking_button"
                android:layout_below="@+id/addressEvent"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_value"
                android:id="@+id/value_button"
                android:layout_below="@+id/checking_button"
                android:layout_alignParentEnd="true"
                android:visibility="invisible"
                android:singleLine="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
