<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.edu.upc.redevent.activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:id="@+id/photoImageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profle"
            android:contentDescription="@string/profile_photo_profile"
            android:scaleType="centerCrop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_change_button"
            android:id="@+id/photoButton"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_alignBottom="@+id/photoImageView"
            android:layout_alignEnd="@+id/photoImageView"
            android:onClick="selectPhoto" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/fullnameTextView"
            android:layout_weight="1"
            android:textSize="24sp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_button"
            android:id="@+id/fullnameButton"
            android:layout_weight="0.03" />
    </LinearLayout>
</LinearLayout>
