<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        android:id="@+id/eventCard">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="pe.edu.upc.redevent.activities.EventActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/imageDetailEvent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/image_default"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:id="@+id/descriptionDetailEvent"
                android:layout_below="@+id/imageDetailEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/event_date"
                android:id="@+id/textDetailEvent"
                android:layout_below="@+id/descriptionDetailEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="01/01/2016"
                android:id="@+id/dateDetailEvent"
                android:layout_below="@+id/descriptionDetailEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textDetailEvent"
                android:layout_alignBottom="@+id/textDetailEvent" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:text="@string/event_hour"
                android:id="@+id/textHourDetailEvent"
                android:layout_below="@+id/dateDetailEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="20:30"
                android:id="@+id/hourDetailEvent"
                android:layout_below="@+id/dateEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textHourDetailEvent"
                android:layout_alignBottom="@+id/textHourDetailEvent" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/event_address"
                android:id="@+id/textAddressEvent"
                android:layout_below="@+id/hourDetailEvent"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Avenida Javier Prado 1144 San Isidro"
                android:id="@+id/addressDetailEvent"
                android:layout_below="@+id/hourEvent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textAddressEvent"
                android:layout_alignBottom="@+id/textAddressEvent" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_join"
                android:id="@+id/buttonJoin"
                android:layout_below="@+id/addressDetailEvent"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
